WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74439
fix interpreter debug build
https://bugs.webkit.org/show_bug.cgi?id=74439
Summary
fix interpreter debug build
Andy Wingo
Reported
2011-12-13 12:20:58 PST
The JSC debug build is broken, at least for INTERPRETER=1 JIT=0 builds. Patch to be attached fixes it.
Attachments
Patch
(1.19 KB, patch)
2011-12-13 12:22 PST
,
Andy Wingo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Wingo
Comment 1
2011-12-13 12:22:07 PST
Created
attachment 119064
[details]
Patch
WebKit Review Bot
Comment 2
2011-12-13 14:10:29 PST
Comment on
attachment 119064
[details]
Patch Clearing flags on attachment: 119064 Committed
r102706
: <
http://trac.webkit.org/changeset/102706
>
WebKit Review Bot
Comment 3
2011-12-13 14:10:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug