Fix interpreter debug build. https://bugs.webkit.org/show_bug.cgi?id=74439

Patch by Andy Wingo <wingo@igalia.com> on 2011-12-13
Reviewed by Geoffrey Garen.

* bytecode/ValueRecovery.h: Include stdio.h on debug builds.

Canonical link: https://commits.webkit.org/91094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102706 268f45cc-cd09-0410-ab3c-d52691b4dbfc